feat: configure ranking threshold for VJ-65
